@@ -48,6 +48,8 @@
 
 	logLik.svyglm used to return the deviance and now divides it by -2
 
+	svybys() to make multiple tables by separate variables rather than a joint table.
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
